@@ -106,7 +106,7 @@ password = s3cr3t
 # bootloader_folder = bootloader   # Where bootloader (and bootsplash) is stored, relative to "base_folder"
 # pxe_bootloader = pxe_boot        # the network bootloader
 # cd_bootloader = cd_boot          # the cdrom bootloader
-# bootsplash_file = bootsplash.xpm # the bootloader splashscreen
+# bootsplash_file = bootsplash.png # the bootloader splashscreen
 ### Bootmenus
 # Where boot menus are generated / being served, relative to "base_folder"
 # bootmenus_folder = bootmenus
